# imagger

./: .example.env  .gitignore  Dockerfile  Makefile  README.md  additional_task.py  docker-compose.yml  pyproject.toml  task.md
src/: manage.py
src/app/: admin.py  tests.py  urls.py
src/app/migrations/: 0001_initial.py  0002_image_description.py
src/app/migrations/constants/: __init__.py  tags.py  users.py
src/app/models/: image.py  tag.py
src/app/serializers/: __init__.py  image.py  tag.py
src/app/views/: __init__.py  image.py  tag.py
src/imagger/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/user/: serializers.py  tests.py  urls.py  views.py
